--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
             </div>
         </div>
         <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="50" rows="20" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
 
         </div>
     </footer>
