--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="btn-primary ">Download CV</button>
                 <button class="btn-primary ">Contact</button>
             </div>
-            <img class="banner-profile-pic" src="/images/hardy.png" alt="">
+            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
         </div>
     </header>
     <main>
